apps/whoami/post-install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
  labels:
    app: whoami
    app.kubernetes.io/name: whoami
    app.kubernetes.io/part-of: whoami
    app.kubernetes.io/instance: whoami
    app.kubernetes.io/component: whoami
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.local.asztalos.net`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: traefik
        - name: default-headers
          namespace: traefik
      services:
        - name: whoami
          namespace: default
          port: 80
  tls:
    secretName: local-asztalos-net-tls
